# lemin

./: CMakeLists.txt  Makefile  README.md  author  lem-in  map
includes/: ft_lemin.h  ft_printf.h  libft.h  vs.h
libft/: Makefile  author  ft_atoi.c  ft_bitwise_shift.c  ft_bitwise_shift_buf.c  ft_btree_apply_infix.c  ft_btree_apply_prefix.c  ft_btree_apply_suffix.c  ft_btree_new_node.c  ft_buf_init_d.c  ft_buf_init_dioux.c  ft_buf_init_e.c  ft_buf_init_float.c  ft_buf_init_inff.c  ft_buf_init_o.c  ft_buf_init_u.c  ft_buf_init_x.c  ft_bzero.c  ft_check_infnan.c  ft_check_linfnan.c  ft_define_format.c  ft_del.c  ft_division_str.c  ft_double_exp.c  ft_double_mantissa.c  ft_exp.c  ft_help.c  ft_help_2.c  ft_if_hash.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_s.c  ft_itoa_u.c  ft_ldouble_mantissa.c  ft_left_alignment.c  (+79 more)
src/: ft_add_command.c  ft_add_links.c  ft_add_out.c  ft_add_room.c  ft_build_group.c  ft_cleaner_ant.c  ft_create_ant.c  ft_create_gpaths.c  ft_create_group.c  ft_create_link.c  ft_create_nodes.c  ft_create_path.c  ft_create_room.c  ft_create_tree.c  ft_del_dead_ends.c  ft_init_lemin.c  ft_manipulate_ant.c  ft_navigation.c  ft_path_utils.c  ft_print.c  ft_print_path.c  ft_solution.c  ft_solution_utils.c  ft_val.c  ft_val_overflow.c  main.c  vs.c  vs2.c  vs3.c  vs4.c  vs5.c  vs6.c  vs7.c
