cmake_minimum_required(VERSION 3.16.5)
project(lemin C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(src)

add_executable(lemin
        includes/ft_lemin.h
        includes/ft_printf.h
        includes/libft.h
        includes/vs.h
        libft/ft_atoi.c
        libft/ft_bitwise_shift.c
        libft/ft_bitwise_shift_buf.c
        libft/ft_btree_apply_infix.c
        libft/ft_btree_apply_prefix.c
        libft/ft_btree_apply_suffix.c
        libft/ft_btree_new_node.c
        libft/ft_buf_init_d.c
        libft/ft_buf_init_dioux.c
        libft/ft_buf_init_e.c
        libft/ft_buf_init_float.c
        libft/ft_buf_init_inff.c
        libft/ft_buf_init_o.c
        libft/ft_buf_init_u.c
        libft/ft_buf_init_x.c
        libft/ft_bzero.c
        libft/ft_check_infnan.c
        libft/ft_check_linfnan.c
        libft/ft_define_format.c
        libft/ft_del.c
        libft/ft_division_str.c
        libft/ft_double_exp.c
        libft/ft_double_mantissa.c
        libft/ft_exp.c
        libft/ft_help.c
        libft/ft_help_2.c
        libft/ft_if_hash.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_itoa_s.c
        libft/ft_itoa_u.c
        libft/ft_ldouble_mantissa.c
        libft/ft_left_alignment.c
        libft/ft_lstadd.c
        libft/ft_lstapend.c
        libft/ft_lstat.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_overflow_digit_check.c
        libft/ft_parser.c
        libft/ft_pow.c
        libft/ft_pow_str_10.c
        libft/ft_pow_str_2.c
        libft/ft_print_binar.c
        libft/ft_print_char.c
        libft/ft_print_decimal.c
        libft/ft_print_float.c
        libft/ft_print_hex.c
        libft/ft_print_octal.c
        libft/ft_print_percent.c
        libft/ft_print_pointer.c
        libft/ft_print_string.c
        libft/ft_print_udecimal.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_right_alignment.c
        libft/ft_rounding_f.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_sum_str_frac.c
        libft/ft_sum_str_int.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_vspom4.c
        libft/ft_vspomog.c
        libft/get_next_line.c
        libft/kostyliivelosipedy.c
        src/ft_add_command.c
        src/ft_add_links.c
        src/ft_add_out.c
        src/ft_add_room.c
        src/ft_build_group.c
        src/ft_cleaner_ant.c
        src/ft_create_ant.c
        src/ft_create_gpaths.c
        src/ft_create_group.c
        src/ft_create_link.c
        src/ft_create_nodes.c
        src/ft_create_path.c
        src/ft_create_room.c
        src/ft_create_tree.c
        src/ft_del_dead_ends.c
        src/ft_init_lemin.c
        src/ft_manipulate_ant.c
        src/ft_navigation.c
        src/ft_path_utils.c
        src/ft_print.c
        src/ft_print_path.c
        src/ft_solution.c
        src/ft_solution_utils.c
        src/ft_val.c
        src/ft_val_overflow.c
        src/main.c
 ##       src/vs.c
        ##         src/vs2.c
        ##         src/vs3.c
        ##         src/vs4.c
        ##         src/vs5.c
        ##         src/vs6.c
##          src/vs7.c
        )
